 + Certain elements of mcMMO's UI have been restyled
 + Added the tagline "Overhaul Era" to various locations until 3.0.0 comes out
 + (Config) New config file added coreskills.yml
 + (Config) Added rank settings for the new Woodcutting skill
 + (Config) Added configurable parameters for the new Tree Feller
 + (Config) Added classic toggle for Tree Feller
 + (Chat) Added ability for admins to spy on party chat (off unless toggled on)
 + (Commands) Added new info command /mmoinfo or /mcinfo
 + (Commands) Added toggle command /mcchatspy
 + (API) Added many missing SubSkills to SubSkillType class
 + (Permissions) Added permission node mcmmo.commands.mcchatspy & mcmmo.commands.mcchatspy.others
 + (Permissions) Added permission nodes for Harvest Lumber, Splinter, Nature's Bounty, and Bark Surgeon
 + (Permissions) Added mcmmo.commands.mmoinfo for the new mmoinfo/mcinfo command
 + (Locale) Added locale strings for new Woodcutting abilities
 + (Locale) Added locale strings for mcchatspy command
 + (Locale) Added locale strings for JSON integration
 + (Locale) Added locale strings for Taming's Pummel SubSkill
 + (Locale) Added locale strings for Unarmed's Block Cracker SubSkill
 - (Locale) Removed localizations with the following codes for being almost empty: id, HR_hr, et_EE, lv, lt, no, pl_PL, pt_PT, tr_TR
 - (Config) Removed SkillShot's IncreaseLevel & IncreasePercentage (replaced by RankDamageMultiplier)
 - (Config) Removed AxeMastery's MaxBonus & MaxBonusLevel (replaced by RankDamageMultiplier)
 = (Items) Chimaera Wing now tracks cooldowns between sessions for players (no more disconnect abuse)
 = (Skills) Added missing mushroom blocks to experience.yml defaults
 = (Skills) Tridents will no longer be considered unarmed
 = (MySQL) You can now inspect offline players
 ! (Party) Party member list will only include members of the party that you can see (aren't vanished)