@@ -19,6 +19,7 @@ Version 2.1.0
  + (Config) Added rank settings for the new Woodcutting skill
  + (Config) Added configurable parameters for the new Tree Feller
  + (Config) Added classic toggle for Tree Feller
+ + (Config) Added toggle to disable all scoreboards
  + (Chat) Added ability for admins to spy on party chat (off unless toggled on)
  + (Commands) Added new info command /mmoinfo or /mcinfo
  + (Commands) Added toggle command /mcchatspy
